[tool.poetry]
name = "hexlet-django-blog"
version = "0.1.0"
description = ""
authors = ["BarabanovaIrina <irlania@mail.ru>"]
readme = "README.md"
packages = [{include = "hexlet_django_blog"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
